[package]
name = "rustions_and_dragons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
magic = { path = "./magic/" }
screens = { path = "./screens/" }
serde = "1.0.160"
serde_json = "1.0.96"
